--- a/src/main/java/com/mycompany/flightbookingsystem/customerRegistration.form
+++ b/src/main/java/com/mycompany/flightbookingsystem/customerRegistration.form
@@ -128,7 +128,7 @@
                               <Component id="jLabel4" alignment="0" min="-2" pref="90" max="-2" attributes="0"/>
                               <Component id="jLabel6" alignment="0" min="-2" pref="90" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="392" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
@@ -147,31 +147,38 @@
                       </Group>
                   </Group>
               </Group>
-              <Group type="102" attributes="0">
-                  <EmptySpace min="210" pref="210" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="nameTF" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                      <Component id="emailTF" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                      <Component id="genderTF" alignment="0" min="-2" pref="172" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="32767" attributes="0"/>
-              </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="77" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="passportnoTF" alignment="1" min="-2" pref="172" max="-2" attributes="0"/>
-                              <Component id="phonenoTF" alignment="1" min="-2" pref="172" max="-2" attributes="0"/>
-                              <Component id="addressTF" alignment="1" min="-2" pref="172" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabel3" min="-2" pref="406" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                       </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="phonenoTF" min="-2" pref="172" max="-2" attributes="0"/>
+                              <Component id="addressTF" min="-2" pref="172" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="passportnoTF" min="-2" pref="172" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="210" pref="210" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="emailTF" alignment="1" pref="172" max="32767" attributes="0"/>
+                              <Component id="genderTF" alignment="1" pref="172" max="32767" attributes="0"/>
+                              <Component id="nameTF" alignment="0" pref="172" max="32767" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -186,34 +193,34 @@
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="nameTF" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                              <Component id="nameTF" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                               <Component id="jLabel1" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel5" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
-                          <Component id="emailTF" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="emailTF" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="genderTF" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="genderTF" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="passportnoTF" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="passportnoTF" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                       <Component id="jLabel8" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel4" alignment="3" max="32767" attributes="0"/>
-                      <Component id="phonenoTF" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="phonenoTF" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="addressTF" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="addressTF" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                       <Component id="jLabel6" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
@@ -221,7 +228,7 @@
                       <Component id="signupBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel9" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="32" max="32767" attributes="0"/>
+                  <EmptySpace pref="44" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
